src/App.css
/*============= shared by all screens =============*/
body {
  font-family: "Titillium Web", sans-serif;
  margin: 0;
}

/* ----------------------------------------------
 * Generated by Animista on 2022-10-20 8:14:58
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */
@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.start-colours {
  background-color: #2a9d8f;
}

.colours1 {
  background-color: #264653;
}

.colours2 {
  background-color: #e9c46a;
}

.colours3 {
  background-color: #f4a261;
}

.colours4 {
  background-color: #e76f51;
}

.start-colours,
.colours1,
.colours2,
.colours3,
.colours4 {
  transition-property: background-color;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  transition-delay: 0s;
}

button {
  -webkit-animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  font-family: "Titillium Web", sans-serif;
  /* font-family: "JetBrains Mono",monospace; */
  align-items: center;
  appearance: none;
  background-color: #fcfcfd;
  border-radius: 4px;
  border-width: 0;
  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
  box-sizing: border-box;
  color: #36395a;
  cursor: pointer;
  display: inline-flex;  
  justify-content: center;
  line-height: 1;
  list-style: none;
  overflow: hidden;
  position: relative;
  text-align: left;
  text-decoration: none;
}

.main-screen {
  color: white;  
  display: flex;
  flex-direction: column;
  justify-content: center; /*y axis!! */
  align-items: center; /*x axis!! */
  height: 100vh;
  width: 100%;
}

h1 {
  font-size: 4.5rem;
  font-weight: 700;  
  margin-bottom: 150px;
  text-align: center;
  max-width: 90%;
}

/*============= start screen =============*/

.start-btn {
  width: 400px;
  height: 100px;
  font-size: 40px;
  padding: 30px;
}

/*============= question screen =============*/
.country {  
  -webkit-animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.question-screen-btns {
  width: 50%;
  display: flex;
  flex-direction: row;
  justify-content: center; /*y axis!! */
  align-items: center; /*x axis!! */
  gap: 20%;
}

.question-screen-btns > button {
  font-size: 35px;
  padding: 30px;
  width: 50%;
  height: 100px;
}

/*============= answer screeen =============*/
.answer {  
  -webkit-animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.next-btn {
  font-size: 30px;
  padding: 35px;
  height: 100px;
}

/*============= finish screeen =============*/
.reset-btn {
  font-size: 30px;
  padding: 35px;
  height: 100px;
}


@media only screen and (max-width: 1000px) {

  h1 {
    font-size: 7rem;
    margin-bottom: 250px;
  }  

  .question-screen-btns {
    width: 80%;
  }

  .question-screen-btns > button {
    font-size: 50px;
    height: 150px;
  }
  .question-screen-btns {
    gap: 10%;
    padding: 14px;
  }

  .next-btn {
    font-size: 50px;
    height: 150px;
  }

  .reset-btn {
    font-size: 50px;
    height: 150px;
  }
}

